Lab 9 (testServlet folder)

--- a/STP_Lab8_ya_ebal/pom.xml
+++ b/STP_Lab8_ya_ebal/pom.xml
@@ -4,6 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+<!--    тут может быть ссылка на репозиторий гитхаб-->
     <groupId>com.example</groupId>
     <artifactId>STP_Lab8_ya_ebal</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -17,6 +18,8 @@
         <junit.version>5.8.1</junit.version>
     </properties>
 
+
+<!--    тут добавляются зависимости в проект (библиотеки)-->
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -38,6 +41,7 @@
         </dependency>
     </dependencies>
 
+<!--    а тут можно настроить процесс сборки проекта, например, добавить плагины-->
     <build>
         <plugins>
             <plugin>
