--- a/testServlet/src/main/webapp/WEB-INF/web.xml
+++ b/testServlet/src/main/webapp/WEB-INF/web.xml
@@ -25,11 +25,22 @@
     </welcome-file-list>
 
 
-    <!-- Task 8 -->
-    <context-param>
-        <param-name>message</param-name>
-        <param-value>Parameter from web.xml</param-value>
-    </context-param>
+
+
+    <servlet>
+        <servlet-name>ParamServlet</servlet-name>
+        <servlet-class>com.example.testservlet.Task8.ParamServlet</servlet-class>
+
+        <init-param>
+            <param-name>message</param-name>
+            <param-value>Servlet parameter</param-value>
+        </init-param>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ParamServlet</servlet-name>
+        <url-pattern>/param-servlet</url-pattern>
+    </servlet-mapping>
 
 
 
@@ -44,5 +55,26 @@
         <filter-name>LoggingFilter</filter-name>
         <url-pattern>/logging.jsp</url-pattern>
     </filter-mapping>
+
+
+
+
+
+    <display-name>Сервлетный фильтр (лаба 10)</display-name>
+    <filter>
+        <filter-name>NewSignUpFilter</filter-name>
+        <filter-class>com.example.testservlet.Lab10_servlets.NewSignUpFilter</filter-class>
+        <init-param>
+            <param-name>active</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>NewSignUpFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
 
 </web-app>
